update docs info for register user
